name:                h3spec
version:             0.1.11
synopsis:            QUIC
description:         Test tool for error cases of QUIC and HTTP/3
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto
maintainer:          kazu@iij.ad.jp
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

executable h3spec
  default-language:     Haskell2010
  hs-source-dirs:       .
  main-is:              h3spec.hs
  other-modules:        HTTP3Error
                        TransportError
                        Paths_h3spec
  ghc-options:          -Wall -threaded -rtsopts
  build-depends:        base >= 4.9 && < 5
                      , bytestring
                      , hspec
                      , hspec-core
                      , http-types
                      , http3 >= 0.0.10
                      , network
                      , quic >= 0.2 && < 0.3
                      , tls
                      , unliftio
  default-extensions:   Strict StrictData
